fix: Shortcuts Bar spacing between & y-axis align (#106)
* fix: gap spacing & col align

* add: top padding

--- a/gui/src/shortcuts-bar.css
+++ b/gui/src/shortcuts-bar.css
@@ -10,9 +10,8 @@
 	border-style: solid;
 	border-width: 1px;
 	border-radius: 3px;
-	vertical-align: middle;
 	font-size: 11px;
-	padding: 3px 5px;
+	padding: 2.5px 4.5px;
 	margin: 0 2px;
 }
 
